# MayFlower-RobotSystem

./: Dockerfile  README.md  docker-compose.yml
Docker/: docker-compose.yml
Docker/ros1_base/: Dockerfile
aux/: run_rosbridge.sh
catkin_ws/: frames.gv
catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/install/include/rosapi/: MessageDetailsResponse.h  ServiceRequestDetailsResponse.h  ServiceResponseDetailsResponse.h  TopicsAndRawTypesRequest.h  TopicsAndRawTypesResponse.h  TypeDef.h
catkin_ws/install/include/rosbridge_msgs/: ConnectedClient.h  ConnectedClients.h
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/GPS_Checkpoint/: CMakeLists.txt  package.xml
catkin_ws/src/GPS_Checkpoint/scripts/: Checkpoints_Sub.py
catkin_ws/src/IMU/: CMakeLists.txt  package.xml
catkin_ws/src/IMU/scripts/: IMU_Sub.py
catkin_ws/src/battery/: CMakeLists.txt  package.xml
catkin_ws/src/battery/scripts/: Battery_Sub.py  subscriber.py  testPublisher.py
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/boatPos/: CMakeLists.txt  package.xml
catkin_ws/src/control_utils/: CMakeLists.txt  package.xml
catkin_ws/src/example_package/: CMakeLists.txt  package.xml
catkin_ws/src/file_server/.svn/: wc.db
catkin_ws/src/gps/: CMakeLists.txt  package.xml
catkin_ws/src/imu/: package.xml
catkin_ws/src/navigator_package/: CMakeLists.txt  package.xml
catkin_ws/src/slam_gmapping/: .travis.yml
catkin_ws/src/temperature_monitor/: CMakeLists.txt
catkin_ws/src/testing/: CMakeLists.txt  package.xml
catkin_ws/temperature_monitor/: CMakeLists.txt  package.xml
helper_scripts/: run_rosbridge.sh
(+74 files in other folders)
